# llama_cpp_example

./: .gitignore  CMakeLists.txt  INSTALL_WINDOWS.md  README.md  build_and_run.bat  build_and_run.ps1  run_exaone.cpp
models/: .gitkeep
